設定資料庫連線逾時處理，並將連線字串搬到 appsettings.json

--- a/ShoppingMall/appsettings.json
+++ b/ShoppingMall/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SchoolContext": "Data Source=DANNY-LIU-ASUS;Initial Catalog=ShoppingMall;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
